# isku

./: CHANGELOG.md  CONTRIBUTING.md  README.md  justfile  prek.toml  pyproject.toml  zensical.toml
.github/: dependabot.yaml
.github/workflows/: docs.yml  prek.yaml  python-release.yaml  python-test.yaml
docs/: 1_user_guide.md  2_api_reference.md  3_changelog.md  4_faq.md  4_support.md  5_contributing.md  api_reference.md  faq.md  index.md  support.md  user_guide.md
src/isku/: __init__.py  extract.py  project.py
tests/: smoke_test.py  test_extraction.py  test_projection.py
