[project]
name = "isku"
version = "0.1.0"
description = "Minimalist Python + xarray-based climate impact/damage projection framework for researchers with little time."
readme = "README.md"
authors = [
    { name = "Brewster Malevich", email = "bmalevich@rhg.com" }
]
requires-python = ">=3.14"
dependencies = [
    "xarray>=2026.4.0",
]

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
tests = [
    "numpy>=2.4.4",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]
docs = [
    "mkdocstrings[python]>=1.0.4",
    "zensical>=0.0.40",
]
dev = [
    { include-group = "docs"},
    { include-group = "tests"},
]
