[project]
name = "isku"
version = "0.2.0"
description = "Minimalist Python + xarray-based climate impact projection framework for researchers with little time."
readme = "README.md"
authors = [{ name = "Brewster Malevich", email = "bmalevich@rhg.com" }]
requires-python = ">=3.12"
urls = { Repository = "https://github.com/climateimpactlab/isku", Documentation = "https://climateimpactlab.github.io/isku" }

dependencies = ["xarray"]

[dependency-groups]
tests = [
  "numpy>=2.4.4",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.12",
  "ty>=0.0.35",
]
docs = ["mkdocstrings[python]>=1.0.4", "zensical>=0.0.41"]
dev = [
    { include-group = "docs" },
    { include-group = "tests" },
    "prek>=0.3.13",
]

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[tool.ruff.lint]
extend-select = [
  "YTT",  # flake8-2020
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "ISC",  # flake8-implicit-str-concat
  "PIE",  # flake8-pie
  "TID",  # flake8-tidy-imports (absolute imports)
  "PYI",  # flake8-pyi
  "SIM",  # flake8-simplify
  "FLY",  # flynt
  "I",    # isort
  "PERF", # Perflint
  "W",    # pycodestyle warnings
  "PGH",  # pygrep-hooks
  "PLC",  # Pylint Convention
  "PLE",  # Pylint Errors
  "PLR",  # Pylint Refactor
  "PLW",  # Pylint Warnings
  "UP",   # pyupgrade
  "FURB", # refurb
  "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["isku"]

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"
